deploy/ingress/bff-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bff
  namespace: kube-hello-kiali
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - bff.k3s.dgkim.net
      secretName: bff-k3s-dgkim-net-tls
  rules:
    - host: bff.k3s.dgkim.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: challenge-api
                port:
                  number: 8080
