deploy/ingress/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rps
  namespace: rps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-route53-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - rps.k3s-test.dgkim.net
      secretName: rps-k3s-dgkim-net-tls
  rules:
    - host: rps.k3s-test.dgkim.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
