deploy/ingress/rps-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rps-api
  namespace: rps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-route53-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - rps-api.k3s-test.dgkim.net
      secretName: rps-api-k3s-dgkim-net-tls
  rules:
    - host: rps-api.k3s-test.dgkim.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: challenge-api
                port:
                  number: 8080
